--- a/ebookstore/package.json
+++ b/ebookstore/package.json
@@ -30,10 +30,21 @@
   ],
   "license": "MIT",
   "dependencies": {
+    "buffer": "^5.2.1",
+    "highlight.js": "^9.15.8",
+    "himalaya": "^1.1.0",
+    "moment": "^2.24.0",
+    "node-sass": "^4.12.0",
     "phantom-limb": "0.0.1",
+    "sass-loader": "^7.1.0",
+    "save": "^2.4.0",
+    "superagent": "^5.1.0",
+    "url-parse": "^1.4.7",
     "vue": "^2.5.11",
     "vue-router": "^3.0.1",
-    "weex-vue-render": "^0.12.26"
+    "vuex-router-sync": "^5.0.0",
+    "weex-ui": "^0.6.16",
+    "weex-vue-render": "^1.0.17"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
